infra/k8s/auth-monog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "512m"

---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-service
spec:
  type: ClusterIP
  selector:
    app: auth-mongo
  ports:
  - port: 27017
    targetPort: 27017
